@@ -1,9 +1,9 @@
 <?php
 /**
- * English Language file for PhpGedView.
+ * Polish Language file for PhpGedView.
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2007  PGV Development Team
+ * Copyright (C) 2002 to 2008  PGV Development Team
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -21,6 +21,7 @@
  *
  * @package PhpGedView
  * @subpackage GoogleMap
+ * @author: Łukasz Wileński
  * @version $Id: help_text.pl.php  2008-04-19 16:36:59Z wooc$
  */
  
